--- a/static/css/_variables.scss
+++ b/static/css/_variables.scss
@@ -6,3 +6,4 @@ $primary_alt1:#FF9314;
 $lightgrey:#E9E9E9;
 $input_background:rgba(233, 233, 233, 0.47);
 $query_tablet: '(max-width:767.98px)';
+$body_padding:12.25vw;
