--- a/templates/_contact_us_section.html
+++ b/templates/_contact_us_section.html
@@ -4,7 +4,7 @@
     <div class="bg">
         <div class="contact_grid">
             <div class="contact_us_title">Contact Us</div>
-            <a href="">
+            <a href="{% url 'contact_us' %}">
                 <div class="contact_us_button">
                     <div class="button_text">お問い合わせはこちら</div>
                     <img src="{% static 'img/arrow_forward.svg' %}" alt="">
