--- a/static/css/_header.scss
+++ b/static/css/_header.scss
@@ -31,6 +31,14 @@ header {
             }
         }
         .navbar-nav {
+            .nav-item .nav-link,
+            .language .language_item {
+                &:hover {
+                    color: $primary;
+                    letter-spacing: .1vw;
+                    transition: .3s ease-in;
+                }
+            }
             .nav-item {
                 height: $height;
                 .nav-link {
@@ -49,6 +57,9 @@ header {
                     }
                     &.contact_us_menu_item {
                         background-color: $primary_alt1;
+                        &:hover {
+                            color: $white;
+                        }
                     }
                 }
             }
