--- a/static/css/index.css
+++ b/static/css/index.css
@@ -53,6 +53,19 @@
   margin-left: 1vw;
 }
 
+#contact_us .bg .contact_grid .contact_us_button:hover {
+  background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#E9E9E9));
+  background: linear-gradient(#fff, #E9E9E9);
+  -webkit-box-shadow: 0 0.25vw 0.25vw rgba(0, 0, 0, 0.5);
+          box-shadow: 0 0.25vw 0.25vw rgba(0, 0, 0, 0.5);
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+}
+
+#contact_us .bg .contact_grid .contact_us_button:hover .button_text {
+  color: #4F4F4F;
+}
+
 @media (max-width: 767.98px) {
   #contact_us {
     padding: 16.7vw 0 10.386vw;
