--- a/static/css/master.scss
+++ b/static/css/master.scss
@@ -112,6 +112,10 @@ body {
     font-family: Amiri;
     font-size: 1vw;
     cursor: default;
+     ::selection {
+        background: rgba($primary, .25);
+        text-shadow: 0 .1vw .1vw rgba($black, .5);
+    }
 }
 
 ol,
@@ -140,45 +144,101 @@ table {
 a {
     color: $white;
     &:hover {
+        color: unset;
         text-decoration: none;
-        color: $white;
         cursor: pointer;
     }
 }
 
 @import './header';
 @import './footer';
-.cover_section {
-    display: flex;
-    justify-content: flex-end;
-    height: 30vw;
-    .mobile_super_title {
-        display: none;
+.top_message {
+    font-size: 1.875vw;
+    font-family: Noto Serif JP;
+    line-height: 1.4;
+    width: 100%;
+    text-align: center;
+    text-shadow: 0 .25vw .25vw rgba($black, 0.25);
+    @media #{$query_tablet} {
+        font-size: 3.382vw;
+        text-shadow: 0 1vw 1vw rgba($black, 0.25);
     }
-    .cover_gradient {
-        position: relative;
-        display: flex;
-        justify-content: flex-end;
-        height: 100%;
-        .page_title {
-            position: absolute;
-            bottom: 50%;
-            right: -8vw;
-            transform: translateY(50%) rotate(-90deg);
-            font-size: 7.375vw;
+}
+
+.section_title2 {
+    color: $primary;
+    font-weight: bold;
+    font-family: Noto Sans JP;
+    font-size: 2.25vw;
+    @media #{$query_tablet} {
+        font-size: 4.348vw;
+    }
+}
+
+.section_img {
+    img {
+        margin-top: 7.25vw;
+        width: 100%;
+    }
+}
+
+article {
+    font-family: Noto Sans JP;
+    padding: 0 $body_padding;
+    font-size: 1.188vw;
+    .section_title2 {
+        padding: 2.25vw 0;
+    }
+    p,
+    li {
+        line-height: 1.6;
+    }
+    p {
+        margin-bottom: 2vw;
+    }
+    strong {
+        font-weight: bold;
+        line-height: 1.6;
+    }
+    ol {
+        list-style: decimal;
+        .p {
+            margin: 0 0 2vw 1.5vw;
+        }
+        ul {
+            li {
+                margin-left: 0;
+            }
+        }
+    }
+    @media #{$query_tablet} {
+        $body_padding: 5vw;
+        padding: 0 $body_padding;
+        font-size: 3.14vw;
+        .section_title2 {
+            padding: 2.25vw 0;
+        }
+        p,
+        li {
+            line-height: 1.6;
+        }
+        p {
+            margin-bottom: 2vw;
+        }
+        strong {
             font-weight: bold;
-            color: $primary;
+            line-height: 1.6;
         }
-        img {
-            width: 100%;
-        }
-    }
-    .cover_img {
-        img {
-            width: 70vw;
-            height: 100%;
-            object-fit: cover;
-            object-position: center;
+        ol {
+            list-style: decimal;
+            .p {
+                margin: 0 0 2vw 1.5vw;
+            }
+            ul {
+                li {
+                    margin-left: 0;
+                }
+            }
         }
     }
 }
