--- a/static/css/service.css
+++ b/static/css/service.css
@@ -1,3 +1,117 @@
+header {
+  height: 6.3vw;
+}
+
+.cover_section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  height: 30vw;
+  margin-bottom: 5.875vw;
+}
+
+.cover_section .mobile_super_title {
+  display: none;
+}
+
+.cover_section .title_container {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  height: 100%;
+}
+
+.cover_section .title_container .page_title {
+  position: absolute;
+  bottom: 50%;
+  right: -10vw;
+  -webkit-transform: translateY(50%) rotate(-90deg);
+          transform: translateY(50%) rotate(-90deg);
+  font-size: 6vw;
+  font-weight: bold;
+  color: #FF981F;
+}
+
+.cover_section .title_container img {
+  width: 100%;
+}
+
+.cover_section .cover_img img {
+  width: 70vw;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.cover_section .cover_img img.mobile {
+  display: none;
+}
+
+@media (max-width: 767.98px) {
+  .cover_section {
+    height: auto;
+    position: relative;
+    margin-bottom: 10vw;
+  }
+  .cover_section .mobile_super_title {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: absolute;
+    bottom: 12.5vw;
+    left: 1.5vw;
+  }
+  .cover_section .mobile_super_title .page_title_japanese {
+    font-size: 3.382vw;
+    font-weight: bold;
+    font-family: Noto Serif JP;
+    color: #fff;
+    text-shadow: 0 -0.483vw 0.725vw rgba(0, 0, 0, 0.44);
+  }
+  .cover_section .mobile_super_title img {
+    margin-left: 1vw;
+    width: 37vw;
+  }
+  .cover_section .title_container {
+    position: unset;
+  }
+  .cover_section .title_container .page_title {
+    position: absolute;
+    bottom: 0;
+    left: 1vw;
+    right: unset;
+    -webkit-transform: unset;
+            transform: unset;
+    font-size: 17.15vw;
+    line-height: .5;
+  }
+  .cover_section .title_container .desktop {
+    display: none;
+  }
+  .cover_section .cover_img {
+    width: 100%;
+  }
+  .cover_section .cover_img img {
+    width: 100%;
+    height: auto;
+  }
+  .cover_section .cover_img img.mobile {
+    display: block;
+  }
+  .cover_section .cover_img img.desktop {
+    display: none;
+  }
+}
+
 #contact_us {
   padding: 12.5vw 0 8.25vw;
 }
@@ -53,6 +167,19 @@
   margin-left: 1vw;
 }
 
+#contact_us .bg .contact_grid .contact_us_button:hover {
+  background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#E9E9E9));
+  background: linear-gradient(#fff, #E9E9E9);
+  -webkit-box-shadow: 0 0.25vw 0.25vw rgba(0, 0, 0, 0.5);
+          box-shadow: 0 0.25vw 0.25vw rgba(0, 0, 0, 0.5);
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+}
+
+#contact_us .bg .contact_grid .contact_us_button:hover .button_text {
+  color: #4F4F4F;
+}
+
 @media (max-width: 767.98px) {
   #contact_us {
     padding: 16.7vw 0 10.386vw;
@@ -99,7 +226,145 @@
   }
 }
 
-header {
-  height: 6.3vw;
+.cover_section .title_container .page_title {
+  right: -8vw;
+  font-size: 7.375vw;
+}
+
+@media (max-width: 767.98px) {
+  article {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  article :nth-child(1) {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+  article :nth-child(2) {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  article :nth-child(3) {
+    -webkit-box-ordinal-group: 6;
+        -ms-flex-order: 5;
+            order: 5;
+  }
+  article :nth-child(4) {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+  }
+  article :nth-child(5) {
+    -webkit-box-ordinal-group: 5;
+        -ms-flex-order: 4;
+            order: 4;
+  }
+  article :nth-child(6) {
+    -webkit-box-ordinal-group: 7;
+        -ms-flex-order: 6;
+            order: 6;
+  }
+  article :nth-child(7) {
+    -webkit-box-ordinal-group: 8;
+        -ms-flex-order: 7;
+            order: 7;
+  }
+}
+
+#list_of_services {
+  padding-top: 8.75vw;
+}
+
+#list_of_services .section_title2 {
+  text-align: center;
+}
+
+#list_of_services .services_grid {
+  display: -ms-grid;
+  display: grid;
+  justify-items: center;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  row-gap: 3.125vw;
+  padding: 3.5vw 9vw;
+}
+
+#list_of_services .services_grid .service_card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  line-height: 1.6;
+  height: 7.313vw;
+  text-shadow: 0 0.25vw 0.25vw rgba(0, 0, 0, 0.25);
+  width: 25.625vw;
+  color: #fff;
+  background: #4F4F4F;
+  font-family: Noto Sans JP;
+  font-size: 1.125vw;
+}
+
+#list_of_services .services_grid .service_card.mobile {
+  display: none;
+}
+
+@media (max-width: 767.98px) {
+  #list_of_services {
+    padding-top: 14.25vw;
+  }
+  #list_of_services .services_grid {
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    row-gap: 5.314vw;
+    padding: 6vw 2.5vw;
+  }
+  #list_of_services .services_grid .service_card {
+    line-height: 1.6;
+    height: 12.56vw;
+    width: 42.754vw;
+    text-shadow: 0 1vw 1vw rgba(0, 0, 0, 0.25);
+    font-size: 2.415vw;
+  }
+  #list_of_services .services_grid .service_card.desktop {
+    display: none;
+  }
+  #list_of_services .services_grid .service_card.mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  #list_of_services .services_grid .service_card:nth-child(4) {
+    -webkit-box-ordinal-group: 6;
+        -ms-flex-order: 5;
+            order: 5;
+  }
+}
+
+#digital_marketing .dm_grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: auto;
+      grid-template-columns: auto;
+}
+
+@media (max-width: 767.98px) {
+  #digital_marketing .dm_column:nth-child(1) {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
 }
 /*# sourceMappingURL=service.css.map */
