--- a/static/css/service.scss
+++ b/static/css/service.scss
@@ -1,5 +1,108 @@
 @import './variables';
+@import './cover_section';
 @import './contact_section';
-header {
-    height: 6.3vw;
+.cover_section {
+    .title_container {
+        .page_title {
+            right: -8vw;
+            font-size: 7.375vw;
+        }
+    }
+}
+
+article {
+    @media #{$query_tablet} {
+        display: flex;
+        flex-direction: column;
+         :nth-child(1) {
+            order: 1;
+        }
+         :nth-child(2) {
+            order: 2;
+        }
+         :nth-child(3) {
+            order: 5;
+        }
+         :nth-child(4) {
+            order: 3;
+        }
+         :nth-child(5) {
+            order: 4;
+        }
+         :nth-child(6) {
+            order: 6;
+        }
+         :nth-child(7) {
+            order: 7;
+        }
+    }
+}
+
+#list_of_services {
+    padding-top: 8.75vw;
+    .section_title2 {
+        text-align: center;
+    }
+    .services_grid {
+        display: grid;
+        justify-items: center;
+        grid-template-columns: 1fr 1fr 1fr;
+        row-gap: 3.125vw;
+        padding: 3.5vw 9vw;
+        .service_card {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            line-height: 1.6;
+            height: 7.313vw;
+            text-shadow: 0 .25vw .25vw rgba($black, 0.25);
+            width: 25.625vw;
+            color: $white;
+            background: $dark;
+            font-family: Noto Sans JP;
+            font-size: 1.125vw;
+            &.mobile {
+                display: none;
+            }
+        }
+    }
+    @media #{$query_tablet} {
+        padding-top: 14.25vw;
+        .services_grid {
+            grid-template-columns: 1fr 1fr;
+            row-gap: 5.314vw;
+            padding: 6vw 2.5vw;
+            .service_card {
+                line-height: 1.6;
+                height: 12.56vw;
+                width: 42.754vw;
+                text-shadow: 0 1vw 1vw rgba($black, 0.25);
+                font-size: 2.415vw;
+                &.desktop {
+                    display: none;
+                }
+                &.mobile {
+                    display: flex;
+                }
+                &:nth-child(4) {
+                    order: 5;
+                }
+            }
+        }
+    }
+}
+
+#digital_marketing {
+    .dm_grid {
+        display: grid;
+        grid-template-columns: auto;
+    }
+    @media #{$query_tablet} {
+        .dm_column {
+            &:nth-child(1) {
+                order: 2;
+            }
+        }
+    }
 }
