Finished everything in a 대충 standard
1/6 complete; 2/6 대충; 3/6 대충 4/6 대충 5/6 대충; 6/6 complete

--- a/static/css/about_us.css
+++ b/static/css/about_us.css
@@ -257,6 +257,13 @@ header {
   margin-bottom: .5vw;
 }
 
+@media (max-width: 767.98px) {
+  #vision .vision_body_text {
+    font-size: 3.14vw;
+    padding: 0 4.589vw;
+  }
+}
+
 article #profile {
   font-family: Noto Sans JP;
   display: -webkit-box;
