--- a/templates/industries.html
+++ b/templates/industries.html
@@ -4,20 +4,22 @@
 <!-- TODO: Mobile Version -->
 <!-- Top Message -->
 <div class="top_message_title">産業領域</div>
-<div class="top_message">各産業ごとに必要な人材、資源は異なるため パートナーとの<br>ネットワークを効率的に活用し、<br>お客様をサポートします。
-</div>
+<div class="top_message desktop">各産業ごとに必要な人材、資源は異なるため パートナーとの<br>ネットワークを効率的に活用し、<br>お客様をサポートします。</div>
+<div class="top_message mobile">各産業ごとに必要な人材、資源は異なるため<br>パートナーとのネットワークを効率的に活用し、<br>お客様をサポートします。</div>
 <!-- !Top Message -->
 
 <article>
     <!-- Agricultural Science and Technology -->
     <section id="agro" class="industry_grid">
         <div class="section_img">
-            <img src="{%static 'img/agricultural_science_and_technology.png'%}" alt="">
+            <img class="desktop" src="{%static 'img/agricultural_science_and_technology.png'%}" alt="">
+            <img class="mobile" src="{%static 'img/agricultural_science_and_technology_mobile.png'%}" alt="">
         </div>
         <div class="section_content">
             <div class="title_container">
                 <div class="title_decoration">
-                    <img src="{%static 'img/title_decoration.svg'%}" alt="">
+                    <img class="desktop" src="{%static 'img/title_decoration.svg'%}" alt="">
+                    <img class="mobile" src="{%static 'img/title_decoration_mobile.svg'%}" alt="">
                 </div>
                 <div class="section_title2">農業科学技術</div>
             </div>
@@ -29,12 +31,14 @@
     <!-- Health management -->
     <section id="health_management" class="industry_grid">
         <div class="section_img">
-            <img src="{%static 'img/health_management2.png'%}" alt="">
+            <img class="desktop" src="{%static 'img/health_management2.png'%}" alt="">
+            <img class="mobile" src="{%static 'img/health_management2_mobile.png'%}" alt="">
         </div>
         <div class="section_content">
             <div class="title_container">
                 <div class="title_decoration">
-                    <img src="{%static 'img/title_decoration.svg'%}" alt="">
+                    <img class="desktop" src="{%static 'img/title_decoration.svg'%}" alt="">
+                    <img class="mobile" src="{%static 'img/title_decoration_mobile.svg'%}" alt="">
                 </div>
                 <div class="section_title2">健康管理（維持・予防）</div>
             </div>
@@ -46,12 +50,14 @@
     <!-- Aerospace -->
     <section id="aerospace" class="industry_grid">
         <div class="section_img">
-            <img src="{%static 'img/aerospace.png'%}" alt="">
+            <img class="desktop" src="{%static 'img/aerospace.png'%}" alt="">
+            <img class="mobile" src="{%static 'img/aerospace_mobile.png'%}" alt="">
         </div>
         <div class="section_content">
             <div class="title_container">
                 <div class="title_decoration">
-                    <img src="{%static 'img/title_decoration.svg'%}" alt="">
+                    <img class="desktop" src="{%static 'img/title_decoration.svg'%}" alt="">
+                    <img class="mobile" src="{%static 'img/title_decoration_mobile.svg'%}" alt="">
                 </div>
                 <div class="section_title2">航空宇宙</div>
             </div>
@@ -64,12 +70,14 @@
     <!-- Family care -->
     <section id="family_care" class="industry_grid">
         <div class="section_img">
-            <img src="{%static 'img/family_care.png'%}" alt="">
+            <img class="desktop" src="{%static 'img/family_care.png'%}" alt="">
+            <img class="mobile" src="{%static 'img/family_care_mobile.png'%}" alt="">
         </div>
         <div class="section_content">
             <div class="title_container">
                 <div class="title_decoration">
-                    <img src="{%static 'img/title_decoration.svg'%}" alt="">
+                    <img class="desktop" src="{%static 'img/title_decoration.svg'%}" alt="">
+                    <img class="mobile" src="{%static 'img/title_decoration_mobile.svg'%}" alt="">
                 </div>
                 <div class="section_title2">ファミリーケア</div>
             </div>
@@ -82,12 +90,14 @@
     <!-- Mobile banking -->
     <section id="mobile_banking" class="industry_grid">
         <div class="section_img">
-            <img src="{%static 'img/mobile_banking.png'%}" alt="">
+            <img class="desktop" src="{%static 'img/mobile_banking.png'%}" alt="">
+            <img class="mobile" src="{%static 'img/mobile_banking_mobile.png'%}" alt="">
         </div>
         <div class="section_content">
             <div class="title_container">
                 <div class="title_decoration">
-                    <img src="{%static 'img/title_decoration.svg'%}" alt="">
+                    <img class="desktop" src="{%static 'img/title_decoration.svg'%}" alt="">
+                    <img class="mobile" src="{%static 'img/title_decoration_mobile.svg'%}" alt="">
                 </div>
                 <div class="section_title2">モバイルバンキング</div>
             </div>
@@ -100,12 +110,14 @@
     <!-- IT & system integration -->
     <section id="system_integration" class="industry_grid">
         <div class="section_img">
-            <img src="{%static 'img/system_integration.png'%}" alt="">
+            <img class="desktop" src="{%static 'img/system_integration.png'%}" alt="">
+            <img class="mobile" src="{%static 'img/system_integration_mobile.png'%}" alt="">
         </div>
         <div class="section_content">
             <div class="title_container">
                 <div class="title_decoration">
-                    <img src="{%static 'img/title_decoration.svg'%}" alt="">
+                    <img class="desktop" src="{%static 'img/title_decoration.svg'%}" alt="">
+                    <img class="mobile" src="{%static 'img/title_decoration_mobile.svg'%}" alt="">
                 </div>
                 <div class="section_title2">IT & システムインテグレーション</div>
             </div>
@@ -118,12 +130,14 @@
     <!-- Blockchain/AI -->
     <section id="blockchain" class="industry_grid">
         <div class="section_img">
-            <img src="{%static 'img/blockchain_ai.png'%}" alt="">
+            <img class="desktop" src="{%static 'img/blockchain_ai.png'%}" alt="">
+            <img class="mobile" src="{%static 'img/blockchain_ai_mobile.png'%}" alt="">
         </div>
         <div class="section_content">
             <div class="title_container">
                 <div class="title_decoration">
-                    <img src="{%static 'img/title_decoration.svg'%}" alt="">
+                    <img class="desktop" src="{%static 'img/title_decoration.svg'%}" alt="">
+                    <img class="mobile" src="{%static 'img/title_decoration_mobile.svg'%}" alt="">
                 </div>
                 <div class="section_title2">ブロックチェーン・AI</div>
             </div>
@@ -136,12 +150,14 @@
     <!-- financial services and tax costs -->
     <section id="financial" class="industry_grid">
         <div class="section_img">
-            <img src="{%static 'img/financial_services.png'%}" alt="">
+            <img class="desktop" src="{%static 'img/financial_services.png'%}" alt="">
+            <img class="mobile" src="{%static 'img/financial_services_mobile.png'%}" alt="">
         </div>
         <div class="section_content">
             <div class="title_container">
                 <div class="title_decoration">
-                    <img src="{%static 'img/title_decoration.svg'%}" alt="">
+                    <img class="desktop" src="{%static 'img/title_decoration.svg'%}" alt="">
+                    <img class="mobile" src="{%static 'img/title_decoration_mobile.svg'%}" alt="">
                 </div>
                 <div class="section_title2">金融サービス・税務コストの最適化</div>
             </div>
@@ -154,12 +170,14 @@
     <!-- Gaming -->
     <section id="gaming" class="industry_grid">
         <div class="section_img">
-            <img src="{%static 'img/gaming.png'%}" alt="">
+            <img class="desktop" src="{%static 'img/gaming.png'%}" alt="">
+            <img class="mobile" src="{%static 'img/gaming_mobile.png'%}" alt="">
         </div>
         <div class="section_content">
             <div class="title_container">
                 <div class="title_decoration">
-                    <img src="{%static 'img/title_decoration.svg'%}" alt="">
+                    <img class="desktop" src="{%static 'img/title_decoration.svg'%}" alt="">
+                    <img class="mobile" src="{%static 'img/title_decoration_mobile.svg'%}" alt="">
                 </div>
                 <div class="section_title2">ゲーミング</div>
             </div>
