--- a/templates/thank_you.html
+++ b/templates/thank_you.html
@@ -3,6 +3,7 @@
 <section id="thank_you">
     <div class="big_message">送信完了いたしました。</div>
     <div class="small_message">１〜３営業日中にご連絡いたしますので少々お待ち下さい。</div>
-    <img src="{% static 'img/thank_you.png' %}" alt="Thank you">
+    <img class="desktop" src="{% static 'img/thank_you.png' %}" alt="Thank you">
+    <img class="mobile" src="{% static 'img/thank_you_mobile.png' %}" alt="Thank you">
 </section>
 {% endblock %}
