--- a/static/css/contact_us.scss
+++ b/static/css/contact_us.scss
@@ -11,6 +11,9 @@ article {
     p {
         margin-bottom: 3vw;
     }
+    @media #{$query_tablet} {
+        font-size: 3.14vw;
+    }
 }
 
 form {
@@ -54,7 +57,6 @@ form {
         }
          ::placeholder {
             color: rgba($black, 0.22);
-            ;
         }
     }
     button {
@@ -68,6 +70,21 @@ form {
         &:hover {
             box-shadow: 0 .25vw .25vw rgba($black, .5);
             transition: .3s ease;
+        }
+    }
+    @media #{$query_tablet} {
+        font-size: 3.14vw;
+        .form_group {
+            input,
+            textarea {
+                width: 64.25vw;
+            }
+            input {
+                height: 9.42vw;
+            }
+            textarea {
+                height: 37vw;
+            }
         }
     }
 }
