--- a/static/css/industries.scss
+++ b/static/css/industries.scss
@@ -6,6 +6,22 @@
     font-family: Noto Serif JP;
     text-align: center;
     padding: 2vw 0 3vw;
+    @media #{$query_tablet} {
+        display: none;
+    }
+}
+
+.mobile {
+    display: none;
+    @media #{$query_tablet} {
+        display: block;
+    }
+}
+
+.desktop {
+    @media #{$query_tablet} {
+        display: none;
+    }
 }
 
 article {
@@ -17,6 +33,13 @@ article {
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
+            .title_container {
+                .title_decoration {
+                    img {
+                        width: 8.25vw;
+                    }
+                }
+            }
         }
         .section_text {
             font-size: 1.5vw;
@@ -27,5 +50,39 @@ article {
         .section_img {
             order: 2;
         }
+    }
+    @media #{$query_tablet} {
+        $body_padding: 0;
+        padding: 0 $body_padding;
+        .industry_grid {
+            grid-template-columns: auto;
+            .section_content {
+                padding-left: 7.246vw;
+                .title_container {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    .title_decoration {
+                        img {
+                            width: 1.208vw;
+                        }
+                    }
+                }
+            }
+            .section_text {
+                font-size: 3.14vw;
+            }
+        }
+         :nth-child(2n) {
+            .section_img {
+                order: unset;
+            }
+        }
+    }
+}
+
+#contact_us {
+    @media #{$query_tablet} {
+        padding: 16.7vw 0 0;
     }
 }
