--- a/static/css/thank_you.scss
+++ b/static/css/thank_you.scss
@@ -1,14 +1,37 @@
+@import './variables';
+body {
+    @media #{$query_tablet},
+    (orientation: portrait) {
+        background: $dark;
+    }
+}
+
 header {
     height: 6.3vw;
 }
 
+.mobile {
+    display: none;
+    @media #{$query_tablet} {
+        display: block;
+    }
+}
+
+.desktop {
+    @media #{$query_tablet} {
+        display: none;
+    }
+}
+
 #thank_you {
     font-family: Noto Serif JP;
+    background: $white;
+    padding-bottom: 9vw;
     .big_message {
         font-weight: bold;
         font-size: 2.25vw;
         text-align: center;
-        margin: 12.7vw 0 3vw;
+        padding: 12.7vw 0 3vw;
     }
     .small_message {
         font-size: 1.5vw;
@@ -16,6 +39,19 @@ header {
     }
     img {
         width: 100%;
-        margin: 9vw 0 14.813vw;
+        margin-top: 9vw;
+    }
+    @media #{$query_tablet} {
+        padding-bottom: 14.813vw;
+        .big_message,
+        .small_message {
+            font-size: 3.14vw;
+        }
+        .big_message {
+            padding: 28vw 0 4.5vw;
+        }
+        img {
+            margin-top: 15.5vw;
+        }
     }
 }
