--- a/templates/service.html
+++ b/templates/service.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %} {% load static %} {% block title %}Service{% endblock %} {% block styles %}
 <link rel="stylesheet" href="{% static 'css/service.css' %}"> {% endblock %} {% block content %} {% include "_cover_section.html" with japanese_title='サービス' english_title='Service' cover_img='img/service_cover.png' cover_img_mobile='img/service_cover_mobile.png' %}
 
-<!-- TODO: Change images for mobile version -->
-<!-- TODO: Adjust spacement for mobile version -->
 
 <!-- Top Message -->
 <div class="top_message">各分野のエキスパートがお客様のニーズに合わせて<br>成功へと導きます</div>
@@ -27,9 +25,11 @@
     <!-- Digital Marketing Consulting -->
     <section id="digital_marketing">
         <div class="section_img">
-            <img src="{%static 'img\digital_marketing.png'%}" alt="Digital Marketing">
+            <img class="desktop" src="{%static 'img\digital_marketing.png'%}" alt="Digital Marketing">
+            <img class="mobile" src="{%static 'img\digital_marketing_mobile.png'%}" alt="Digital Marketing">
         </div>
-        <div class="section_title2">デジタルマーケティングコンサルティング</div>
+        <div class="section_title2 desktop">デジタルマーケティングコンサルティング</div>
+        <div class="section_title2 mobile">デジタルマーケティング<br>コンサルティング</div>
         <div class="dm_grid">
             <div class="dm_column">
                 <strong>提供しているサービス内容</strong>
@@ -59,16 +59,18 @@
     <!-- Blockchain -->
     <section id="blockchain">
         <div class="section_img">
-            <img src="{%static 'img\blockchain.png'%}" alt="">
+            <img class="desktop" src="{%static 'img\blockchain.png'%}" alt="">
+            <img class="mobile" src="{%static 'img\blockchain_mobile.png'%}" alt="">
         </div>
-        <div class="section_title2">ウェブ・アプリ・Blockchain 制作&運用</div>
-        <p>
+        <div class="section_title2 desktop">ウェブ・アプリ・Blockchain 制作&運用</div>
+        <div class="section_title2 mobile">ウェブ・アプリ・<br>Blockchain 制作&運用</div>
+        <p class="mb_mobile">
             <strong>ウェブ制作</strong><br> 貴社とヒアリングをし課題とゴールを明確にします。市場調査や分析をもとにサイトのコンセプトの決定し、要件定義にて構造や必要な機能などを決め画面設計をしていき、デザインやシステム開発などの実制作へ進みます。弊社のウェブ制作は、ビジネス課題を解決するため課題抽出と戦略設計をおこない、ビジネスで成果を上げることを目的とした貴社の魅力が伝わるサイト作りを提供しています。
         </p>
-        <p>
+        <p class="mb_mobile">
             <strong>アプリ(アンドロイド・iOS)開発</strong><br>お客様から頂いたご依頼をもとに詳細なヒアリングを行います。ユーザー体験を中心におき、コンテンツ設計、UI/UX設計などをし、開発か らメンテナンスにも対応しております。
         </p>
-        <p>
+        <p class="mb_mobile">
             <strong>Blockchain開発</strong><br>ブロックチェーンを導入しての新規ビジネスの検討や既存ビジネスの改善をサポートいたします。ご依頼をもとに、市場調査や分析、ビジネスモデル構築、要件定義、開発、運営と一貫したコンサルティングを行います。
         </p>
     </section>
@@ -77,7 +79,8 @@
     <!-- Overseas -->
     <section id="overseas">
         <div class="section_img">
-            <img src="{% static 'img/overseas.png' %}" alt="">
+            <img class="desktop" src="{% static 'img/overseas.png' %}" alt="">
+            <img class="mobile" src="{% static 'img/overseas_mobile.png' %}" alt="">
         </div>
         <div class="section_title2">海外進出</div>
         <p>
@@ -105,7 +108,8 @@
     <!-- Investment Matching -->
     <section id="investment">
         <div class="section_img">
-            <img src="{% static 'img/investment.png'%}" alt="">
+            <img class="desktop" src="{% static 'img/investment.png'%}" alt="">
+            <img class="mobile" src="{% static 'img/investment_mobile.png'%}" alt="">
         </div>
         <div class="section_title2">投資マッチング</div>
         <p>お客様が事業拡大のため必要としている資金を投資してくれる投資家とお引き合わせするサービスを提供しています。GMS Groupの強みは、 世界中にネットワークがあることです。投資を必要としている企業が多い中、それを支援したいと言ってくれる投資家と出会うのは容易いことではありません。多くの時間、労働とネットワークを要します。特に大きな可能性を秘めている個人投資家は探してもそう簡単に出会えるものではありません。そんな創造力と行動力のある起業家と、そのビジョンに共感する投資家が、大きなビジネスチャンスを逃さないように最適な出会いをサポートしています。</p>
@@ -125,7 +129,8 @@
     <!-- Tax Supervision -->
     <section id="tax_supervision">
         <div class="section_img">
-            <img src="{% static 'img/tax_supervision.png' %}" alt="">
+            <img class="desktop" src="{% static 'img/tax_supervision.png' %}" alt="">
+            <img class="mobile" src="{% static 'img/tax_supervision_mobile.png' %}" alt="">
         </div>
         <div class="section_title2">税務監督・最適化サービス</div>
         <p>日本では生活を営む上で約 50 種類の税金と関係して暮らしており、税制改正は毎年行われております。 経営者は税金に関しても情報を適切に生かしていくことが求められています。 私たちは経営者の税務会計のパートナーとして、 良質な情報提供と情報交換を通して信頼関係を高め、 お客様の安心と繁栄に貢献していきます。</p>
@@ -135,7 +140,8 @@
     <!-- Health management -->
     <section id="health_management">
         <div class="section_img">
-            <img src="{% static 'img/health_management.png' %}" alt="">
+            <img class="desktop" src="{% static 'img/health_management.png' %}" alt="">
+            <img class="mobile" src="{% static 'img/health_management_mobile.png' %}" alt="">
         </div>
         <div class="section_title2">健康管理</div>
         <p>次世代ヘルスケア産業へ向けて、公的保険外の予防・健康管理サービスの活用を達成することを目指しています。それを通して生活習慣の改善や受診勧奨等を促すことにより、「重症化した後の治療」から「予防や早期診断・早期治療」に重点化するととも に、地域包括ケアシステムと連携した事業に取り組んでいます。</p>
@@ -168,7 +174,8 @@
     <!-- Real estate development -->
     <section id="real_state">
         <div class="section_img">
-            <img src="{% static 'img/real_state_development.png' %}" alt="">
+            <img class="desktop" src="{% static 'img/real_state_development.png' %}" alt="">
+            <img class="mobile" src="{% static 'img/real_state_development_mobile.png' %}" alt="">
         </div>
         <div class="section_title2">不動産開発</div>
         <p>不動産の購入や売却、管理方法、活用法などの悩みを抱えるお客様に対し、客観的な立場から要望にお応えします。物件の売買時や賃貸時における相談、土地や建物の有効活用方法の提案、相続などの問題の解決、ありとあらゆる課題に対して精通したプロフェッショナルが客観的な立場からサポートをします。不動産を「売る」「買う」「貸す」「借りる」といった基本的なサービス以外にも、取引時の契約書・重要事項説明書の作成、金融機関との融資交渉といった実務も提供しています。</p>
