Attempt to fix header for mobile

--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -329,6 +329,18 @@
             height: 5vw;
             width: 16.5vw;
             margin-right: 1.5vw;
+            &:nth-child(1) img {
+                height: 3vw;
+            }
+            &:nth-child(2) img {
+                height: 3.438vw;
+            }
+            &:nth-child(3) img {
+                height: 2.168vw;
+            }
+            &:nth-child(4) img {
+                height: 2.938vw;
+            }
         }
     }
     @media #{$query_tablet} {
@@ -343,8 +355,29 @@
                 width: 38vw;
                 margin-right: 3.865vw;
                 margin-bottom: 4.6vw;
+                &:nth-child(1) {
+                    order: 2;
+                    img {
+                        height: 6.522vw;
+                    }
+                }
+                &:nth-child(2) {
+                    order: 1;
+                    img {
+                        height: 7.246vw;
+                    }
+                }
                 &:nth-child(3) {
                     order: 4;
+                    img {
+                        height: 4.348vw;
+                    }
+                }
+                &:nth-child(4) {
+                    order: 3;
+                    img {
+                        height: 6vw;
+                    }
                 }
             }
         }
