--- a/static/css/index.css
+++ b/static/css/index.css
@@ -559,6 +559,22 @@
   margin-right: 1.5vw;
 }
 
+#partner .ourpartner_cards .partner_card:nth-child(1) img {
+  height: 3vw;
+}
+
+#partner .ourpartner_cards .partner_card:nth-child(2) img {
+  height: 3.438vw;
+}
+
+#partner .ourpartner_cards .partner_card:nth-child(3) img {
+  height: 2.168vw;
+}
+
+#partner .ourpartner_cards .partner_card:nth-child(4) img {
+  height: 2.938vw;
+}
+
 @media (max-width: 767.98px) {
   #partner {
     padding: 21.5vw 0 12vw;
@@ -579,10 +595,37 @@
     margin-right: 3.865vw;
     margin-bottom: 4.6vw;
   }
+  #partner .ourpartner_cards .partner_card:nth-child(1) {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  #partner .ourpartner_cards .partner_card:nth-child(1) img {
+    height: 6.522vw;
+  }
+  #partner .ourpartner_cards .partner_card:nth-child(2) {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+  #partner .ourpartner_cards .partner_card:nth-child(2) img {
+    height: 7.246vw;
+  }
   #partner .ourpartner_cards .partner_card:nth-child(3) {
     -webkit-box-ordinal-group: 5;
         -ms-flex-order: 4;
             order: 4;
+  }
+  #partner .ourpartner_cards .partner_card:nth-child(3) img {
+    height: 4.348vw;
+  }
+  #partner .ourpartner_cards .partner_card:nth-child(4) {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+  }
+  #partner .ourpartner_cards .partner_card:nth-child(4) img {
+    height: 6vw;
   }
 }
 
