--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
                 <div class="acronym">GMS Group</div>
                 <div class="full_name">Global Management Support</div>
             </a>
-            <a class="navbar_toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar_toggler" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <img src="{% static 'img/dehaze.svg' %}" alt="Menu">
             </a>
             <div class="collapse navbar-collapse" id="navbarNav">
